[metadata]
name = 'byaddress'
version = '1.0.0'
license = 'MIT'
description = ''
long_description = file: README.rst
author = 'Promise Mwenga'
author_email = ' '
classifiers= []

[options]
packages = find_packages(),
package_dir =
    =src
include_package_data = True
install_requires = []

[options.packages.find]
where=src
